glue/soloud.cs


	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dSourceVelocity(IntPtr aObjHandle, uint aVoiceHandle, float aVelocityX, float aVelocityY, float aVelocityZ);
	public void set3dSourceVelocity(uint aVoiceHandle, float aVelocityX, float aVelocityY, float aVelocityZ)
	{
		Soloud_set3dSourceVelocity(objhandle, aVoiceHandle, aVelocityX, aVelocityY, aVelocityZ);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dSourceMinMaxDistance(IntPtr aObjHandle, uint aVoiceHandle, float aMinDistance, float aMaxDistance);
	public void set3dSourceMinMaxDistance(uint aVoiceHandle, float aMinDistance, float aMaxDistance)
	{
		Soloud_set3dSourceMinMaxDistance(objhandle, aVoiceHandle, aMinDistance, aMaxDistance);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dSourceAttenuation(IntPtr aObjHandle, uint aVoiceHandle, uint aAttenuationModel, float aAttenuationRolloffFactor);
	public void set3dSourceAttenuation(uint aVoiceHandle, uint aAttenuationModel, float aAttenuationRolloffFactor)
	{
		Soloud_set3dSourceAttenuation(objhandle, aVoiceHandle, aAttenuationModel, aAttenuationRolloffFactor);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Soloud_set3dSourceDopplerFactor(IntPtr aObjHandle, uint aVoiceHandle, float aDopplerFactor);
	public void set3dSourceDopplerFactor(uint aVoiceHandle, float aDopplerFactor)
	{
		Soloud_set3dSourceDopplerFactor(objhandle, aVoiceHandle, aDopplerFactor);
	}
}

public class BiquadResonantFilter : SoloudObject
{
	public const int NONE = 0;
	public const int HIGHPASS = 2;
	public const int WET = 0;
	public const int LOWPASS = 1;
	public const int SAMPLERATE = 1;
	public const int BANDPASS = 3;
	public const int FREQUENCY = 2;
	public const int RESONANCE = 3;

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr BiquadResonantFilter_create();
	public BiquadResonantFilter()
	{
		objhandle = BiquadResonantFilter_create();
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr BiquadResonantFilter_destroy(IntPtr aObjHandle);
	~BiquadResonantFilter()
	{
		BiquadResonantFilter_destroy(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int BiquadResonantFilter_setParams(IntPtr aObjHandle, int aType, float aSampleRate, float aFrequency, float aResonance);
	public int setParams(int aType, float aSampleRate, float aFrequency, float aResonance)
	{
		return BiquadResonantFilter_setParams(objhandle, aType, aSampleRate, aFrequency, aResonance);
	}
}

public class Bus : SoloudObject
{

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr Bus_create();
	public Bus()
	{
		objhandle = Bus_create();
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr Bus_destroy(IntPtr aObjHandle);
	~Bus()
	{
		Bus_destroy(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_setFilter(IntPtr aObjHandle, uint aFilterId, IntPtr aFilter);
	public void setFilter(uint aFilterId, SoloudObject aFilter)
	{
		Bus_setFilter(objhandle, aFilterId, aFilter.objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Bus_playEx(IntPtr aObjHandle, IntPtr aSound, float aVolume, float aPan, int aPaused);
	public uint play(SoloudObject aSound, float aVolume = 1.0f, float aPan = 0.0f, int aPaused = 0)
	{
		return Bus_playEx(objhandle, aSound.objhandle, aVolume, aPan, aPaused);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Bus_playClockedEx(IntPtr aObjHandle, double aSoundTime, IntPtr aSound, float aVolume, float aPan);
	public uint playClocked(double aSoundTime, SoloudObject aSound, float aVolume = 1.0f, float aPan = 0.0f)
	{
		return Bus_playClockedEx(objhandle, aSoundTime, aSound.objhandle, aVolume, aPan);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Bus_play3dEx(IntPtr aObjHandle, IntPtr aSound, float aPosX, float aPosY, float aPosZ, float aVelX, float aVelY, float aVelZ, float aVolume, int aPaused);
	public uint play3d(SoloudObject aSound, float aPosX, float aPosY, float aPosZ, float aVelX = 0.0f, float aVelY = 0.0f, float aVelZ = 0.0f, float aVolume = 1.0f, int aPaused = 0)
	{
		return Bus_play3dEx(objhandle, aSound.objhandle, aPosX, aPosY, aPosZ, aVelX, aVelY, aVelZ, aVolume, aPaused);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern uint Bus_play3dClockedEx(IntPtr aObjHandle, double aSoundTime, IntPtr aSound, float aPosX, float aPosY, float aPosZ, float aVelX, float aVelY, float aVelZ, float aVolume);
	public uint play3dClocked(double aSoundTime, SoloudObject aSound, float aPosX, float aPosY, float aPosZ, float aVelX = 0.0f, float aVelY = 0.0f, float aVelZ = 0.0f, float aVolume = 1.0f)
	{
		return Bus_play3dClockedEx(objhandle, aSoundTime, aSound.objhandle, aPosX, aPosY, aPosZ, aVelX, aVelY, aVelZ, aVolume);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_setVisualizationEnable(IntPtr aObjHandle, int aEnable);
	public void setVisualizationEnable(int aEnable)
	{
		Bus_setVisualizationEnable(objhandle, aEnable);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr Bus_calcFFT(IntPtr aObjHandle);
	public float[] calcFFT()
	{
		float[] ret = new float[256];
		IntPtr p = Bus_calcFFT(objhandle);

		byte[] buffer = new byte[4];
		for (int i = 0; i < ret.Length; ++i)
		{
			int f_bits = Marshal.ReadInt32(p, i * 4);
			buffer[0] = (byte)((f_bits >> 0) & 0xff);
			buffer[1] = (byte)((f_bits >> 8) & 0xff);
			buffer[2] = (byte)((f_bits >> 16) & 0xff);
			buffer[3] = (byte)((f_bits >> 24) & 0xff);
			ret[i] = BitConverter.ToSingle(buffer, 0);
		}
		return ret;
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr Bus_getWave(IntPtr aObjHandle);
	public float[] getWave()
	{
		float[] ret = new float[256];
		IntPtr p = Bus_getWave(objhandle);

		byte[] buffer = new byte[4];
		for (int i = 0; i < ret.Length; ++i)
		{
			int f_bits = Marshal.ReadInt32(p, i * 4);
			buffer[0] = (byte)((f_bits >> 0) & 0xff);
			buffer[1] = (byte)((f_bits >> 8) & 0xff);
			buffer[2] = (byte)((f_bits >> 16) & 0xff);
			buffer[3] = (byte)((f_bits >> 24) & 0xff);
			ret[i] = BitConverter.ToSingle(buffer, 0);
		}
		return ret;
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_setLooping(IntPtr aObjHandle, int aLoop);
	public void setLooping(int aLoop)
	{
		Bus_setLooping(objhandle, aLoop);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_set3dMinMaxDistance(IntPtr aObjHandle, float aMinDistance, float aMaxDistance);
	public void set3dMinMaxDistance(float aMinDistance, float aMaxDistance)
	{
		Bus_set3dMinMaxDistance(objhandle, aMinDistance, aMaxDistance);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_set3dAttenuation(IntPtr aObjHandle, uint aAttenuationModel, float aAttenuationRolloffFactor);
	public void set3dAttenuation(uint aAttenuationModel, float aAttenuationRolloffFactor)
	{
		Bus_set3dAttenuation(objhandle, aAttenuationModel, aAttenuationRolloffFactor);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_set3dDopplerFactor(IntPtr aObjHandle, float aDopplerFactor);
	public void set3dDopplerFactor(float aDopplerFactor)
	{
		Bus_set3dDopplerFactor(objhandle, aDopplerFactor);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_set3dProcessing(IntPtr aObjHandle, int aDo3dProcessing);
	public void set3dProcessing(int aDo3dProcessing)
	{
		Bus_set3dProcessing(objhandle, aDo3dProcessing);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_set3dListenerRelative(IntPtr aObjHandle, int aListenerRelative);
	public void set3dListenerRelative(int aListenerRelative)
	{
		Bus_set3dListenerRelative(objhandle, aListenerRelative);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_set3dDistanceDelay(IntPtr aObjHandle, int aDistanceDelay);
	public void set3dDistanceDelay(int aDistanceDelay)
	{
		Bus_set3dDistanceDelay(objhandle, aDistanceDelay);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_set3dColliderEx(IntPtr aObjHandle, IntPtr aCollider, int aUserData);
	public void set3dCollider(SoloudObject aCollider, int aUserData = 0)
	{
		Bus_set3dColliderEx(objhandle, aCollider.objhandle, aUserData);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern void Bus_stop(IntPtr aObjHandle);
	public void stop()
	{
		Bus_stop(objhandle);
	}
}

public class EchoFilter : SoloudObject
{

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr EchoFilter_create();
	public EchoFilter()
	{
		objhandle = EchoFilter_create();
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr EchoFilter_destroy(IntPtr aObjHandle);
	~EchoFilter()
	{
		EchoFilter_destroy(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int EchoFilter_setParamsEx(IntPtr aObjHandle, float aDelay, float aDecay, float aFilter);
	public int setParams(float aDelay, float aDecay = 0.7f, float aFilter = 0.0f)
	{
		return EchoFilter_setParamsEx(objhandle, aDelay, aDecay, aFilter);
	}
}

public class FFTFilter : SoloudObject
{
	public const int OVER = 0;
	public const int MULTIPLY = 2;
	public const int SUBTRACT = 1;

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr FFTFilter_create();
	public FFTFilter()
	{
		objhandle = FFTFilter_create();
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr FFTFilter_destroy(IntPtr aObjHandle);
	~FFTFilter()
	{
		FFTFilter_destroy(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int FFTFilter_setParametersEx(IntPtr aObjHandle, int aShift, int aCombine, float aScale);
	public int setParameters(int aShift, int aCombine = 0, float aScale = 0.002f)
	{
		return FFTFilter_setParametersEx(objhandle, aShift, aCombine, aScale);
	}
}

public class FlangerFilter : SoloudObject
{
	public const int FREQ = 2;
	public const int WET = 0;
	public const int DELAY = 1;

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr FlangerFilter_create();
	public FlangerFilter()
	{
		objhandle = FlangerFilter_create();
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern IntPtr FlangerFilter_destroy(IntPtr aObjHandle);
	~FlangerFilter()
	{
		FlangerFilter_destroy(objhandle);
	}

	[DllImport("soloud_x86.dll", CallingConvention = CallingConvention.Cdecl)]
	internal static extern int FlangerFilter_setParams(IntPtr aObjHandle, float aDelay, float aFreq);
	public int setParams(float aDelay, float aFreq)
	{
		return FlangerFilter_setParams(objhandle, aDelay, aFreq);
	}
}
